# Ohtu2021

./: haara2.txt
Viikko1/nhl-statistics-1/src/: index.py  statistics.py
Viikko1/nhl-statistics-1/src/tests/: statistics_test.py
Viikko2/poetry-web/: pyproject.toml
Viikko2/project-reader/src/: project_reader.py
Viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py
Viikko3/hello-robot/src/: CounterLibrary.py
Viikko3/login-robot/src/services/: user_service.py
Viikko3/login-robot/src/tests/: login.robot  register.robot
Viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
Viikko3/web-login-robot/src/services/: user_service.py
Viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
Viikko4/int-joukko/src/: int_joukko.py
Viikko4/maksukortti-mock/src/: kassapaate.py
Viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
Viikko4/mock-demo/.cache/v/cache/: lastfailed
Viikko4/tennis/src/: tennis_game.py
Viikko4/verkkokauppa/: .coverage
Viikko4/verkkokauppa/htmlcov/: index.html  src_index_py.html  src_kauppa_py.html  src_kirjanpito_py.html  src_ostoskori_py.html  src_pankki_py.html  src_tests___init___py.html  src_tests_kauppa_test_py.html  src_tuote_py.html  src_varasto_py.html  src_viitegeneraattori_py.html  status.json
Viikko4/verkkokauppa/src/tests/: kauppa_test.py
Viikko5/: muutos.txt  retro.md
Viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
Viikko6/query-language/src/: index.py  matchers.py
Viikko7/: referaatti.md
